<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_register_info_greeting_text"
        style="@style/text_style_register_fragment"
        android:text="@string/info_greeting"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintBottom_toTopOf="@id/register_with_vk_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_register_info_vk_text"
        style="@style/text_style_register_fragment"
        android:layout_width="250dp"
        android:text="@string/info_vk"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/register_with_vk_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_register_info_greeting_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_register_info_local_text"
        style="@style/text_style_register_fragment"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/info_local"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/register_with_vk_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_register_info_vk_text" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/register_with_vk_btn"
        android:layout_width="172dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_vk_logo"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_without_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/vk_blue_color"
        android:padding="5dp"
        android:text="@string/continue_without_auth_btn_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>