<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_round"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save_record_bottom_sheet_text"
        android:textAlignment="center"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filename_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_btn"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/gray"
            android:text="@string/cancel_text_btn"
            android:textColor="@color/gray_dark"
            app:cornerRadius="26dp"
            app:rippleColor="@color/gray_dark" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok_btn"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/stroke_color"
            android:text="@string/save_text_btn"
            android:textColor="@color/white"
            app:cornerRadius="26dp"
            app:rippleColor="@color/gray_dark" />
    </LinearLayout>
</LinearLayout>